--- a/settings.json
+++ b/settings.json
@@ -3,6 +3,6 @@
     "checkForUpdates": true,
     "language": "en-us",
     "commandPrefix": "!",
-    "debug":false,
-    "suppessWarnings":true
+    "debug": false,
+    "suppressWarnings": true
 }
